--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-photoswipe",
   "version": "1.3.0",
   "description": "PhotoSwipe, PhotoSwipeGallery component for ReactJS base on PhotoSwipe.",
-  "main": "lib/index.js",
+  "main": "dist/react-photoswipe.js",
   "scripts": {
     "start": "NODE_ENV=development babel-node example/webpack.server.js --hot",
     "lint": "NODE_ENV=development eslint .",
